updated about and contact pages

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 					<h1>Motivated by good.</h1>
 					<p class="intro">At the heart of VYLA is a love we all share for dairy. Our goal is simple: to gather the data and perspectives of the industry as a whole, free from any one participating company’s perceived bias. </p>
 					<div class="text-content">
-						<p>To achieve this, participation from every corner of the industry is paramount. That includes data, input and opinions from every step in the supply chain, including the most important constituency: the consumer.</p><p>The end result will be improvement in sustainability, processing,product innovations and new value for everyone.</p>
+						<p>To achieve this, participation from every corner of the industry is paramount. That includes data, input and opinions from every step in the supply chain, including the most important constituency: the consumer.</p><p>The end result will be improvement in sustainability, processing, product innovations and new value for everyone.</p>
 					</div>
 					<div class="button-c2a">
 						<a href="/join" class="button button-blue">Join Us Now!<span class="arrow"></span></a>
@@ -104,7 +104,7 @@
 					<p class="tagline">The Story of Vyla</p>
 					<h2>Connecting the farmer and the consumer by making the supply chain completely transparent.</h2>
 					<div class="text-content">
-						<p>WFor generations, children have asked that same question: “where does milk come from?” One answer has always sufficed: “from cows.” But that’s not enough anymore. Consumers want to know the real origins of their food. And those who supply it have a message - Doing dairy means doing good.</p>
+						<p>For generations, children have asked that same question: “where does milk come from?” One answer has always sufficed: “from cows.” But that’s not enough anymore. Consumers want to know the real origins of their food. And those who supply it have a message - Doing dairy means doing good.</p>
 
 <p>That’s why five of the world’s leading and forward-thinking dairy companies  - Land O’ Lakes, Lely Group, VAS and Antelliq - have partnered to raise the standard for the industry. Together with launch partner Nestlé, they bring their individual strengths to the creation of a new and entirely different technology company.</p>
 
