--- a/contact.html
+++ b/contact.html
@@ -161,16 +161,16 @@
 								</div>
 							</div>
 							<div class="footer-contact-socials">
-								<div class="footer-title"><h3>Follow Us</h3></div>
+								<!-- <div class="footer-title"><h3>Follow Us</h3></div> -->
 								<!-- <div class="footer-links">
 									<ul>
 										<li><a href="https://wwww.twitter.com">Twitter</a></li>
 										<li><a href="https://wwww.facebook.com">Facebook</a></li>
 									</ul>
 								</div> -->
-								<div class="footer-button">
+								<!-- <div class="footer-button">
 									<a href="https://mdst.typeform.com/to/VTG8Y7" class="button button-lightblue">Join Us Now!<span class="arrow"></span></a>	
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
