added Join Us button to footer of each page

--- a/thefarm.html
+++ b/thefarm.html
@@ -217,6 +217,9 @@
 								<!-- <div class="footer-button">
 									<a href="https://mdst.typeform.com/to/VTG8Y7" class="button button-lightblue">Join Us Now!<span class="arrow"></span></a>	
 								</div> -->
+								<div class="footer-button">
+									<a href="/join" class="button button-lightblue">Join Us<span class="arrow"></span></a>	
+								</div>
 							</div>
 						</div>
 					</div>
