--- a/about.html
+++ b/about.html
@@ -241,6 +241,9 @@
 								<!-- <div class="footer-button">
 									<a href="https://mdst.typeform.com/to/VTG8Y7" class="button button-lightblue">Join Us Now!<span class="arrow"></span></a>	
 								</div> -->
+								<div class="footer-button">
+									<a href="/join" class="button button-lightblue">Join Us<span class="arrow"></span></a>	
+								</div>
 							</div>
 						</div>
 						
