--- a/thefarm.html
+++ b/thefarm.html
@@ -57,8 +57,8 @@
 				<div class="container">
 				<nav class="mobile">
 					<ul>
-						<li><a class="current-page" href="/about">About</a></li>
-						<li><a href="/thefarm">The Farm</a></li>
+						<li><a href="/about">About</a></li>
+						<li><a class="current-page" href="/thefarm">The Farm</a></li>
 						<li><a href="/contact">Contact</a></li>
 					</ul>
 				</nav>
