changed url from https to http for vyla logo

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Vyla">
-	<meta property="og:url" content="https://www.vyla.com">
+	<meta property="og:url" content="http://www.vyla.com">
 	<meta property="og:image" content="">
 	<meta property="og:description" content="">
 	<meta property="og:site_name" content="Vyla">
