--- a/thefarm.html
+++ b/thefarm.html
@@ -9,7 +9,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Vyla">
-	<meta property="og:url" content="https://www.vyla.com">
+	<meta property="og:url" content="http://www.vyla.com">
 	<meta property="og:image" content="">
 	<meta property="og:description" content="">
 	<meta property="og:site_name" content="Vyla">
@@ -26,7 +26,7 @@
 		<header>
 			<div class="container header-top">
 				<div class="header-left">
-					<a href="https://www.vyla.com/" class="logo">
+					<a href="http://www.vyla.com/" class="logo">
 						<img src="assets/vyla-logo.svg">
 					</a>
 				</div>
