fixed info@vyla.com links

--- a/about.html
+++ b/about.html
@@ -226,7 +226,7 @@
 								<div class="footer-links">
 									<ul>
 										<!-- <li>+44 345 678 903</li> -->
-										<li><a href="mailto:hello@vyla.com">info@vyla.com</a></li>
+										<li><a href="mailto:info@vyla.com">info@vyla.com</a></li>
 									</ul>	
 								</div>
 							</div>
