added link to typeform for each Join Us button on each page

--- a/thefarm.html
+++ b/thefarm.html
@@ -41,7 +41,7 @@
 						</nav>
 					</div>
 					<div class="navigation-c2a">
-						<a href="/join" class="button button-small button-blue">Join Us</a>
+						<a href="https://mdst.typeform.com/to/VTG8Y7" class="button button-small button-blue">Join Us</a>
 					</div>
 					<div class="mobile-button">
 						<button class="menuButton js-toggleNav">
@@ -80,7 +80,7 @@
 					<h1>It all starts here.</h1>
 					<p class="intro">Right now, our team is building a suite of tools to capture data from the farm out with a strategy to remove silos and scale so all participants along the dairy chain get new value, insight and efficiency.</p>
 					<div class="button-c2a">
-						<a href="/join" class="button button-blue">Join Us Now!<span class="arrow"></span></a>
+						<a href="https://mdst.typeform.com/to/VTG8Y7" class="button button-blue">Join Us Now!<span class="arrow"></span></a>
 					</div>
 				</div>
 				
@@ -110,7 +110,7 @@
 <p>With VYLA, answers to these questions is just the start.</p>
 					</div>
 					<div class="button-c2a">
-						<a href="/thefarm" class="button button-blue">Join Us Now!</a>
+						<a href="https://mdst.typeform.com/to/VTG8Y7" class="button button-blue">Join Us Now!</a>
 					</div>
 				</div>
 				
@@ -201,7 +201,6 @@
 								<div class="footer-title"><h3>Get in touch</h3></div>
 								<div class="footer-links">
 									<ul>
-										<!-- <li>+44 345 678 903</li> -->
 										<li><a href="mailto:info@vyla.com">info@vyla.com</a></li>
 									</ul>	
 								</div>
@@ -218,7 +217,7 @@
 									<a href="https://mdst.typeform.com/to/VTG8Y7" class="button button-lightblue">Join Us Now!<span class="arrow"></span></a>	
 								</div> -->
 								<div class="footer-button">
-									<a href="/join" class="button button-lightblue">Join Us<span class="arrow"></span></a>	
+									<a href="https://mdst.typeform.com/to/VTG8Y7" class="button button-lightblue">Join Us<span class="arrow"></span></a>	
 								</div>
 							</div>
 						</div>
