changed allflex logo link to www.allflex.com

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 							<a href="https://www.nestle.com"><img src="assets/partner-logos-nestle.svg" alt="partner-logos-nestle" ></a>
 						</div>
 						<div class="partner-logo">
-							<a href="https://www.antelliq.com"><img src="assets/partner-logos-allflex.svg" alt="partner-logos-allflex" ></a>
+							<a href="http://www.allflexusa.com/"><img src="assets/partner-logos-allflex.svg" alt="partner-logos-allflex" ></a>
 						</div>
 					</div>
 					<div class="footer-contact rounded-bottomright">
