added google analytics in head

--- a/thefarm.html
+++ b/thefarm.html
@@ -18,7 +18,15 @@
 	<meta name="theme-color" content="#00529C">
 	<link href="style.css" rel="stylesheet">
 	
-	
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129539607-5"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-129539607-5');
+	</script>
 </head>
 
 <body>	
